# paraflop

./: '  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
.cmake/api/v1/reply/: index-2023-04-18T13-50-26-0514.json
assets/: viking_room.ktx
assets/shaders/: closesthit.bak.rchit  closesthit.rchit  closesthit.rchit.bak  closesthit.rchit.spv  frag_new.spv  miss.rmiss  miss.rmiss.spv  raygen.rgen  raygen.rgen.bak  raygen.rgen.spv  shader.frag  shader.vert  shader_new.frag  shader_new.vert  shadow.rmiss.spv  tmp.diff  tmp1.diff  utils.glsl  vert_new.spv
assets/shaders.bak/: shader.vert
cmake_modules/: Findglfw.cmake  Findglm.cmake
include/: buffer.hpp  command_buffer.hpp  common.hpp  create_info.hpp  debug.hpp  device.hpp  graphics_pipeline.hpp  renderer.hpp  renderer_impl.hpp  surface.hpp  swap_chain.hpp  vertex_buffer.hpp
include/geometry/: camera.h  camera.hpp  uniform_buffer_object.hpp  uniform_buffer_objects.hpp  vertex.hpp
include/gltf_model/: animation.hpp  gltf_common.hpp  gltf_model.hpp  material.hpp  mesh.hpp  model.hpp  node.hpp  primitive.hpp  skin.hpp  texture.hpp  vertex.hpp
include/interface/: camera_rotation.hpp  custom_graphics_pipeline.hpp  glfw_callbacks.hpp  renderer.hpp  renderer_impl.hpp
include/renderer/: custom_graphics_pipeline.hpp  renderer.hpp  renderer_impl.hpp
include/vulkan_utils/: buffer.hpp  buffer_handler.hpp  command_buffer.hpp  common.hpp  create_info.hpp  debug.hpp  depth_buffer.hpp  descriptor_set.hpp  device.hpp  gltf_model.hpp  graphics_pipeline.hpp  image.hpp  index_buffer.hpp  raytracer_base.hpp  renderer.hpp  renderer_impl.hpp  shader_binding_table.hpp  staging_buffer.hpp  surface.hpp  swap_chain.hpp  texture.hpp  uniform_buffer.hpp  utils.hpp  vertex_buffer.hpp  vk_instance.hpp  window.hpp
src/: buffer  buffer.cpp  buffer_handler.cpp  camera.cpp  command_buffer.cpp  common.hpp  create_info.cpp  debug.cpp  debug.hpp  descriptor_set.cpp  device.cpp  device.hpp  glfw_callbacks.cpp  graphics_pipeline.cpp  graphics_pipeline.hpp  main.cpp  main.cpp.bak  render_pass.cpp  render_pass.hpp  renderer.cpp  sample.cpp.bak  surface.cpp  surface.hpp  swap_chain.cpp  swap_chain.hpp  texture.cpp  vk_instance.cpp  vk_instance.hpp  window.cpp  window.hpp
src/base/: camera.cpp  command_buffer.cpp  create_info.cpp  depth_buffer.cpp  descriptor_set.cpp  device.cpp  gltf_model.cpp  graphics_pipeline.cpp  raytracer_base.cpp  shader_binding_table.cpp  surface.cpp  swap_chain.cpp  texture.cpp  utils.cpp  window.cpp
src/gltf_model/: gltf_model.cpp  material.cpp  mesh.cpp  model.cpp  node.cpp  primitive.cpp  texture.cpp  vertex.cpp
src/paraflop/: camera.hpp  custom_command_bufffer.hpp  custom_graphics_pipeline.hpp  glfw_callbacks.cpp  main.cpp  raytracer.cpp  raytracer.hpp
src/paraflop.bak/: main.cpp.bak
